--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.14",
+    "vue-axios": "^3.2.5",
     "vue-router": "^3.2.0",
+    "vue-swal": "^1.0.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
