--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "bootstrap": "^5.0.2",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "mathjs": "^9.4.4",
     "vue": "^2.6.14",
     "vue-axios": "^3.2.5",
     "vue-router": "^3.2.0",
     "vue-swal": "^1.0.0",
+    "vue2-wheel-picker": "^0.1.3",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
