--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "mathjs": "^9.4.4",
+    "moment": "^2.29.1",
     "vue": "^2.6.14",
     "vue-axios": "^3.2.5",
     "vue-router": "^3.2.0",
